--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
   <script src="https://unpkg.com/togeojson@0.16.0/togeojson.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <style>
     html, body {
       height: 100%;
@@ -595,28 +596,14 @@
 <div class="toggle-layers" onclick="toggleLayerControl()">🗺️ Show Layers</div>
 
 <div class="bottom-toolbar" id="functionToolbar">
-  <div class="toolbar-header" onclick="toggleToolbar()">
-    <h3>
-      <span id="toolbarToggleIcon">▼</span>
-      Functions
-      <div class="user-info">
-        <span id="userInitials" class="user-role"></span>
-        <span id="userName"></span>
-      </div>
-    </h3>
-  </div>
   <div class="toolbar-content">
-    <div class="button-group">
-      <button class="toolbar-button" onclick="printMap()">🖨️ Print</button>
-      <button class="toolbar-button" onclick="resetMap()">🔄 Reset</button>
-      <button class="toolbar-button" onclick="showSummaryPopup()">📊 Summary</button>
-    </div>
-
-    <div class="button-group">
-      <label for="importFile" class="toolbar-button">🗂️ Import KML</label>
-      <input type="file" id="importFile" accept=".kml" style="display:none;" onchange="handleKMLImport(event)">
-      <button class="toolbar-button" onclick="exportData()">💾 Export CSV</button>
-      <button class="toolbar-button" onclick="saveGullyData()">💾 Backup</button>
+    <div class="button-group admin-only">
+      <button class="toolbar-button" onclick="showUserManagement()">👥 Users</button>
+      <button class="toolbar-button" onclick="logout()">🚪 Logout</button>
+      <button class="toolbar-button" onclick="enableEditMode()">✏️ Edit</button>
+      <button class="toolbar-button" onclick="enableDeleteMode()">🗑️ Delete</button>
+      <button class="toolbar-button" onclick="enableAddMode()">➕ Add New</button>
+      <button class="toolbar-button" onclick="showLayerControl()">🗺️ Layers</button>
     </div>
   </div>
 </div>
@@ -2559,6 +2546,45 @@ window.initMap = function() {
   originalInitMap.call(this);
   initializeLayerVisibility();
 };
+
+// Add/replace import handler for KMZ
+function handleKMZImport(event) {
+  const file = event.target.files[0];
+  if (!file) return;
+
+  if (!file.name.toLowerCase().endsWith('.kmz')) {
+    alert('Please select a KMZ file');
+    return;
+  }
+
+  const reader = new FileReader();
+  reader.onload = async function(e) {
+    try {
+      const zip = await JSZip.loadAsync(e.target.result);
+      // Find the first KML file in the KMZ
+      let kmlFile = null;
+      zip.forEach((relativePath, zipEntry) => {
+        if (zipEntry.name.toLowerCase().endsWith('.kml') && !kmlFile) {
+          kmlFile = zipEntry;
+        }
+      });
+      if (!kmlFile) {
+        alert('No KML file found inside the KMZ');
+        return;
+      }
+      const kmlText = await kmlFile.async('text');
+      const kml = new DOMParser().parseFromString(kmlText, 'text/xml');
+      const geojson = toGeoJSON.kml(kml);
+      // Call your existing logic to add geojson to the map here
+      // Example: addGeoJsonToMap(geojson);
+      alert('KMZ imported successfully!');
+    } catch (error) {
+      console.error('Error importing KMZ:', error);
+      alert('Error importing KMZ file. Please check the file and try again.');
+    }
+  };
+  reader.readAsArrayBuffer(file);
+}
 </script>
 </body>
 </html>
