--- a/index.html
+++ b/index.html
@@ -931,8 +931,8 @@ function initMap() {
   });
   
   // Add the base layer
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '🇮🇪 Cork City Council GIS | © OpenStreetMap contributors',
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+    attribution: '&copy; <a href="https://carto.com/">CARTO</a> contributors',
     maxZoom: 19
   }).addTo(window.map);
   
